--- a/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/mdf-exam/mdf-exam.component.html
+++ b/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/mdf-exam/mdf-exam.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <h2 style="text-align:center">Angular Exam using Model Driven Form</h2>
     <form [formGroup]="myForm" (ngSubmit)="submit()">
         <div *ngFor="let q of allQuestion">
@@ -8,4 +8,4 @@
         </div>
         <input type="submit" value="submit"/>
     </form>
-</div>
+</div> -->
