--- a/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/mdf-exam/mdf-exam.component.html
+++ b/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/mdf-exam/mdf-exam.component.html
@@ -1,13 +1,13 @@
-<div>
+<!-- <div>
     <h2 style="text-align:center">Angular Exam using Model Driven Form</h2>
     <form [formGroup]="myForm" (ngSubmit)="submit()">
         <div *ngFor="let q of allQuestion">
             <p>How much is {{q.question}}?</p>
         <input type="radio" formControlName={{q.question}} value={{q.ans1}}/>{{q.ans1}}<br/>
         <input type="radio" formControlName={{q.question}} value={{q.ans2}}/>{{q.ans2}}<br/>
-        <input type="radio" formControlName={{q.question}} value={{q.ans2}}/>{{q.ans3}}<br/>
-        <input type="radio" formControlName={{q.question}} value={{q.ans2}}/>{{q.ans4}}<br/>
+        <input type="radio" formControlName={{q.question}} value={{q.ans3}}/>{{q.ans3}}<br/>
+        <input type="radio" formControlName={{q.question}} value={{q.ans4}}/>{{q.ans4}}<br/>
         </div>
         <input type="submit" value="submit"/>
     </form>
-</div>
+</div> -->
