--- a/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/tdf-exam/tdf-exam.component.html
+++ b/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/tdf-exam/tdf-exam.component.html
@@ -1,13 +1,33 @@
 <div>
-    <h2 style="text-align:center">Please do the best you can</h2>
-    <form #examRef="ngForm">
-        <div *ngFor="let q of allQuestion">
-
-               <p>How much is {{q.question}}?</p> 
-               <input type="radio" name={{q.question}} value={{q.ans1}} ngModel/>{{q.ans1}}<br/>
-               <input type="radio" name={{q.question}} value={{q.ans2}} ngModel/>{{q.ans2}}<br/>
-               <input type="radio" name={{q.question}} value={{q.ans2}} ngModel/>{{q.ans3}}<br/>
-               <input type="radio" name={{q.question}} value={{q.ans2}} ngModel/>{{q.ans4}}<br/>
-        </div>
-    </form>
+  <h2 style="text-align: center">Please do the best you can</h2>
+  <form #examRef="ngForm">
+    <div *ngFor="let q of allQuestion">
+      <p>How much is {{ q.question }}?</p>
+      <input
+        type="radio"
+        name="{{ q.question }}"
+        value="{{ q.ans1 }}"
+        ngModel
+      />{{ q.ans1 }}<br />
+      <input
+        type="radio"
+        name="{{ q.question }}"
+        value="{{ q.ans2 }}"
+        ngModel
+      />{{ q.ans2 }}<br />
+      <input
+        type="radio"
+        name="{{ q.question }}"
+        value="{{ q.ans3 }}"
+        ngModel
+      />{{ q.ans3 }}<br />
+      <input
+        type="radio"
+        name="{{ q.question }}"
+        value="{{ q.ans4 }}"
+        ngModel
+      />{{ q.ans4 }}<br />
+    </div>
+    <input type="submit" value="submit" />
+  </form>
 </div>
