Online Test App

--- a/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/tdf-exam/tdf-exam.component.html
+++ b/Phase 2/Phase 2 End Project Online Test Application/online-exam-app/src/app/tdf-exam/tdf-exam.component.html
@@ -1,5 +1,6 @@
 <div>
-  <h2 style="text-align: center">Please do the best you can</h2>
+  <h2 style="text-align: center">Math Quiz</h2>
+  <hr>
   <form #examRef="ngForm">
     <div *ngFor="let q of allQuestion">
       <p>How much is {{ q.question }}?</p>
