--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/deleteCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/deleteCourse.html
@@ -17,9 +17,10 @@
       document.getElementById('response').innerHTML = response;
     })
 
-    function reset() {document.getElementById('id').value = '';}
+    function reset() {document.getElementById('id').value = '';};
 
-    
+    function 
+
     
   </script>
 </head>
