--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/fetchCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/fetchCourse.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Fetch Course</title>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="text-align: center;font-family: 'Epilogue', sans-serif;">
   <h2>Fetch Course</h2>
 </body>
 </html>
