--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/fetchCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/fetchCourse.html
@@ -6,8 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fetch Course</title>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <script src="/socket.io/socket.io.js"></script>
+  
 </head>
 <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
   <h2>Fetch Course</h2>
+  <a href="/">Main Page</a><br><br>
+  <div id="fail"></div><br>
+  <table id="table">
+    <tr></tr>
+  </table>
 </body>
 </html>
