--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/addCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/addCourse.html
@@ -5,31 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Course</title>
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    // initiating the socket
-    var socket = io();
-
-    socket.io("startup",(start) =>{
-      console.log(start);
-    });
-
-    socket.on("added_response", (response) => { 
-      console.log(response);
-      document.getElementById("response").innerHTML = response;
-    });
-
-    () => { 
-      document.getElementById("id").value = "";
-      document.getElementById("name").value = "";
-      document.getElementById("description").value = "";
-      document.getElementById("coursePrice").innerHTML = "";
-    }
-
-
-  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="text-align: center;font-family: 'Epilogue', sans-serif;">
   <h2>Add Course</h2>
   <label>Course Id : </label>
   <input type="text" id="id" name="id" placeholder="Course Id"> <br>
