--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/addCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/addCourse.html
@@ -9,7 +9,10 @@
 </head>
 <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
   <h2>Add Course</h2>
-  
+  <form action="add" method='POST'>
+    <label for="courseID">Course Id</label>
+    
+  </form>
   
 </body>
 </html>
