--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/addCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/addCourse.html
@@ -10,9 +10,24 @@
 <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
   <h2>Add Course</h2>
   <form action="add" method='POST'>
-    <label for="courseID">Course Id</label>
     
+    <label for="courseID">Course Id</label>
+    <input type="text" name="courseID" required><br><br>
+
+    <label for="courseName">Course Name</label>
+    <input type="text" name="courseName" required><br><br>
+
+    <label for="courseDescription">Course Description</label>
+    <input type="text" name="courseDescription" required><br><br>
+
+    <label for="amount">Amount</label>
+    <input type="text" name="amount" required><br><br>
+
+    <input style="text-align: center;font-family: 'Epilogue', sans-serif;" type="submit" value="Add">
+    <input style="text-align: center;font-family: 'Epilogue', sans-serif;" type="reset" value="Reset"><br><br>
+
   </form>
   
+  <a href="index">Go back to HomePage</a>
 </body>
 </html>
