--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/deleteCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/deleteCourse.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Delete Course</title>
-  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
 
-    socket.on('startup',(start)=>{
-      console.log(start);
-    })
-    socket.on('deleted_response',(response)=>{
-      console.log(response);
-      document.getElementById('response').innerHTML = response;
-    })
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Delete Course</title>
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet">
+  </head>
 
-    function reset() {document.getElementById('id').value = '';};
+  <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
+    <h2>Delete Course</h2>
+    <form action="delete" method="GET">
+      <label>Course Id: </label>
+      <input style="font-family: 'Epilogue', sans-serif;" type='number'/><br>
+      <input style="font-family: 'Epilogue', sans-serif;" type='button' value='Delete'/>
+      <input style="font-family: 'Epilogue', sans-serif;" type='button' value='Reset' /> <br><br>
 
-    function submit(){
-      let course_id = document.getElementById('id').value;
+    </form>
 
-      if(course_id == '') {document.getElementById('response').innerHTML = 'Please enter a course ID';}
-      else { 
-        socket.emit("course_deleted",Number(course_id));
-        reset();
-      }
-    }
-  </script>
-</head>
-<body style="text-align: center;font-family: 'Epilogue', sans-serif;">
-  <h2>Delete Course</h2>
-  <label>Course Id: </label>
-  <input style="font-family: 'Epilogue', sans-serif;" type='number' id='id'/><br>
-  <input style="font-family: 'Epilogue', sans-serif;" type='button' value='Delete' onclick='submit()'/>
-  <input style="font-family: 'Epilogue', sans-serif;" type='button' value='Reset' onclick='reset()'/> <br><br>
-  <div id='response'></div><br>
-  <a href="/">Main page</a>
-</body>
+    <a href="/">Main page</a>
+  </body>
+
 </html>
