--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/deleteCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/deleteCourse.html
@@ -13,14 +13,18 @@
   <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
     <h2>Delete Course</h2>
     <form action="delete" method="GET">
+
+
       <label>Course Id: </label>
-      <input style="font-family: 'Epilogue', sans-serif;" type='number'/><br>
+      <input style="font-family: 'Epilogue', sans-serif;" type='number' name="cID"/><br><br>
+
+
       <input style="font-family: 'Epilogue', sans-serif;" type='button' value='Delete'/>
-      <input style="font-family: 'Epilogue', sans-serif;" type='button' value='Reset' /> <br><br>
+      <input style="font-family: 'Epilogue', sans-serif;" type='button' value='Reset'/><br><br>
 
     </form>
 
-    <a href="/">Main page</a>
+    <a href="index">Go back to HomePage</a>
   </body>
 
 </html>
