--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/index.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/index.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Main Page</title>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script src='/socket.io/socket.io.js'></script>
 </head>
 <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
-  <h2>Choose the courses</h2>
+  <h2>Welcome to the Home Page</h2>
   <div>
     <a style="text-decoration: none;" href="add">Add Course  <span>||</span></a>
     <a style="text-decoration: none;" href="update">Update Course <span>||</span></a>
