--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/fetchCourse.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/fetchCourse.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
-  <h2>Fetch Course</h2><br><br>
+  <h2>List of Courses</h2><br><br>
 
   <a href="index">Go back to HomePage</a><br><br>
 </body>
