--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/index.html
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/template/index.html
@@ -10,10 +10,10 @@
 <body style="text-align: center;font-family: 'Epilogue', sans-serif;">
   <h2>Welcome to the Home Page</h2>
   <div>
-    <a style="text-decoration: none;" href="addCourse">Add Course  <span>||</span></a>
-    <a style="text-decoration: none;" href="updateCourse">Update Course <span>||</span></a>
-    <a style="text-decoration: none;"  href="deleteCourse">Delete Course <span>||</span></a>
-    <a style="text-decoration: none;" href="fetchCourse">Fetch Course</a>
+    <a style="text-decoration: none;" href="/template/addCourse.html">Add Course  <span>||</span></a>
+    <a style="text-decoration: none;" href="/template/updateCourse.html">Update Course <span>||</span></a>
+    <a style="text-decoration: none;"  href="/template/deleteCourse.html">Delete Course <span>||</span></a>
+    <a style="text-decoration: none;" href="/template/fetchCourse.html">Fetch Course</a>
   </div>
 </body>
 </html>
